--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
                 <div>
                     <i class="fa-solid fa-code-merge"></i>
-                    <h2>API Integrationo</h2>
+                    <h2>API Integration</h2>
                     <p>
                         ✔ RESTful API development (Node.js/Express)<br>
                         ✔ Third-party API integration (Payment, Social, Cloud)<br>
