--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/8cd60501b2.js" crossorigin="anonymous"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
     <div id="header">
@@ -28,7 +29,7 @@
            </nav>
            <div class="header-text" data-aos="fade-up">
             <p>Backend Developer</p>
-            <h1>Hi, I'm <span>Mahin</span> <br> From Bangladesh</h1>
+            <h1><span id="typed-text"></span> <br> From Bangladesh</h1>
             <a href="#contact" class="btn">Get in Touch</a>
            </div> 
         </div>
@@ -86,7 +87,7 @@
         <div class="container">
             <h1 class="sub-title" data-aos="fade-up">My Services</h1>
             <div class="services-list">
-                <div data-aos="fade-up" data-aos-delay="100">
+                <div data-aos="fade-up" data-aos-delay="100" class="service-card">
                     <i class="fa-solid fa-code"></i>
                     <h2>Backend Development</h2>
                     <p>
@@ -98,7 +99,7 @@
                     </p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
-                <div data-aos="fade-up" data-aos-delay="200">
+                <div data-aos="fade-up" data-aos-delay="200" class="service-card">
                     <i class="fa-solid fa-database"></i>
                     <h2>Database Designing</h2>
                     <p>
@@ -114,7 +115,7 @@
                     </p>
                     <a href="#" class="btn">Learn More</a>
                 </div>
-                <div data-aos="fade-up" data-aos-delay="300">
+                <div data-aos="fade-up" data-aos-delay="300" class="service-card">
                     <i class="fa-solid fa-code-merge"></i>
                     <h2>API Integration</h2>
                     <p>
@@ -130,10 +131,61 @@
         </div>
     </div>
 
+    <!-- Tech Stack Section -->
+    <div id="tech-stack">
+        <div class="container">
+            <h1 class="sub-title" data-aos="fade-up">Tech Stack</h1>
+            <div class="tech-grid" data-aos="fade-up">
+                <div class="tech-item">
+                    <i class="fab fa-node-js"></i>
+                    <span>Node.js</span>
+                </div>
+                <div class="tech-item">
+                    <i class="fab fa-js"></i>
+                    <span>JavaScript</span>
+                </div>
+                <div class="tech-item">
+                    <i class="fab fa-react"></i>
+                    <span>React</span>
+                </div>
+                <div class="tech-item">
+                    <i class="fas fa-database"></i>
+                    <span>MongoDB</span>
+                </div>
+                <div class="tech-item">
+                    <i class="fas fa-server"></i>
+                    <span>MySQL</span>
+                </div>
+                <div class="tech-item">
+                    <i class="fab fa-git-alt"></i>
+                    <span>Git</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Contact Section -->
     <div id="contact">
         <div class="container">
             <h1 class="sub-title" data-aos="fade-up">Contact Me</h1>
+            <div class="contact-form" data-aos="fade-up">
+                <form id="contactForm" action="https://formsubmit.co/md.mahin.bd18@gmail.com" method="POST">
+                    <input type="text" name="name" placeholder="Your Name" required>
+                    <input type="email" name="email" placeholder="Your Email" required>
+                    <textarea name="message" placeholder="Your Message" required></textarea>
+                    <!-- Honeypot to prevent spam -->
+                    <input type="text" name="_honey" style="display:none">
+                    <!-- Disable Captcha -->
+                    <input type="hidden" name="_captcha" value="false">
+                    <!-- Success page redirect -->
+                    <input type="hidden" name="_next" value="thanks.html">
+                    <!-- Your email address -->
+                    <input type="hidden" name="_subject" value="New Contact Form Submission">
+                    <input type="hidden" name="_template" value="table">
+                    <input type="hidden" name="_autoresponse" value="Thank you for your message. I will get back to you soon.">
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
             <div class="contact-info" data-aos="fade-up">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
@@ -156,12 +208,25 @@
         </div>
     </div>
 
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         // Initialize AOS
         AOS.init({
             duration: 1000,
             once: true
+        });
+
+        // Typing Animation
+        var typed = new Typed('#typed-text', {
+            strings: ['Hi, I\'m Mahin'],
+            typeSpeed: 100,
+            backSpeed: 50,
+            loop: false
         });
 
         // Tab functionality
@@ -206,6 +271,32 @@
                     }
                 }
             });
+        });
+
+        // Back to Top Button
+        const backToTopButton = document.getElementById('backToTop');
+        
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 300) {
+                backToTopButton.style.display = 'block';
+            } else {
+                backToTopButton.style.display = 'none';
+            }
+        });
+
+        backToTopButton.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
+        // Contact Form Submission
+        document.getElementById('contactForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            // Add your form submission logic here
+            alert('Thank you for your message! I will get back to you soon.');
+            this.reset();
         });
     </script>
 </body>
