removed dummy data

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
-                            <li><span>2023 - Present</span><br>Backend Developer at Tech Company</li>
-                            <li><span>2022 - 2023</span><br>Junior Developer at Startup</li>
+                            <!-- <li><span>2023 - Present</span><br>Backend Developer at Tech Company</li>
+                            <li><span>2022 - 2023</span><br>Junior Developer at Startup</li> -->
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
