--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahin - Backend Developer</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/8cd60501b2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
@@ -178,7 +178,7 @@
                     <!-- Disable Captcha -->
                     <input type="hidden" name="_captcha" value="false">
                     <!-- Success page redirect -->
-                    <input type="hidden" name="_next" value="thanks.html">
+                    <input type="hidden" name="_next" value="https://mahin273.github.io/thanks.html">
                     <!-- Your email address -->
                     <input type="hidden" name="_subject" value="New Contact Form Submission">
                     <input type="hidden" name="_template" value="table">
