--- a/portfolio.html
+++ b/portfolio.html
@@ -194,19 +194,19 @@
 
             <!-- Project 3 -->
             <div class="project-card" data-aos="fade-up" data-aos-delay="200">
-                <img src="images/project3.jpg" alt="Project 3" class="project-image">
+                <img src="images/statspybot.jpg" alt="StatSpyBot Project" class="project-image">
                 <div class="project-content">
-                    <h3>Authentication Service</h3>
-                    <p>A microservice handling user authentication with support for multiple providers, session management, and security features.</p>
+                    <h3>StatSpyBot - Telegram Analytics Bot</h3>
+                    <p>A Telegram bot that provides detailed analytics on your Telegram activity, similar to "Spotify Wrapped" but for your Telegram life. Features include message statistics, activity heatmaps, word clouds, and achievement badges.</p>
                     <div class="project-tech">
                         <span class="tech-tag">Node.js</span>
-                        <span class="tech-tag">OAuth</span>
-                        <span class="tech-tag">Redis</span>
-                        <span class="tech-tag">JWT</span>
+                        <span class="tech-tag">SQLite</span>
+                        <span class="tech-tag">Sequelize</span>
+                        <span class="tech-tag">Chart.js</span>
+                        <!-- <span class="tech-tag">NLP</span> -->
                     </div>
                     <div class="project-links">
-                        <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-                        <a href="#" target="_blank"><i class="fab fa-github"></i> Source Code</a>
+                        <a href="https://github.com/mahin273/StatSpyBot" target="_blank"><i class="fab fa-github"></i> Source Code</a>
                     </div>
                 </div>
             </div>
