added banner in project

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
         <div class="projects-grid">
             <!-- Project 1 -->
             <div class="project-card" data-aos="fade-up">
-                <img src="images/urbease.jpg" alt="UrbanEase Project" class="project-image">
+                <img src="images/urbanease.jpg" alt="UrbanEase Project" class="project-image">
                 <div class="project-content">
                     <h3>UrbanEase - Community Problem Reporting Portal</h3>
                     <p>A web-based platform for residents to report community problems and allow other residents and administrators to view, comment, and manage these reports. Features include problem reporting, status tracking, commenting system, and email notifications.</p>
