--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="cv.pdf" download class="download-cv">Download CV</a></li>
+                    <li><a href="CV.pdf" download class="download-cv">Download CV</a></li>
                 </ul>
              </div>
              <i class="fas fa-bars" onclick="showMenu()"></i>
